--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "mocha --require react-native-mock/mock.js --compilers js:babel-register --recursive tests/**/*.test.js"
   },
   "dependencies": {
     "react-native": "^0.21.0",
     "react-native-maps": "^0.3.0",
     "react-native-modal-picker": "0.0.13",
     "react-native-scrollable-tab-view": "^0.4.0"
+  },
+  "devDependencies": {
+    "babel": "^6.3.26",
+    "babel-jest": "^6.0.1",
+    "babel-plugin-extensible-destructuring": "^3.0.1",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-airbnb": "^1.0.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.4.1",
+    "enzyme": "^2.0.0-rc1",
+    "mocha": "^2.3.4",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-native-mock": "^0.0.6"
   }
 }
